Использована общая TestForm для создания и редактирования тестов. Обновлены CreateTestServlet EditTestServlet TestFormParser и TestFormValidator